@@ -350,6 +350,8 @@
 	geany_functions->p_filetypes->filetypes_lookup_by_name
 #define filetypes_index \
 	geany_functions->p_filetypes->filetypes_index
+#define filetypes_get_display_name \
+	geany_functions->p_filetypes->filetypes_get_display_name
 #define navqueue_goto_line \
 	geany_functions->p_navqueue->navqueue_goto_line
 #define main_reload_configuration \
