@@ -54,7 +54,7 @@
  * @warning You should not test for values below 200 as previously
  * @c GEANY_API_VERSION was defined as an enum value, not a macro.
  */
-#define GEANY_API_VERSION 200
+#define GEANY_API_VERSION 201
 
 /** The Application Binary Interface (ABI) version, incremented whenever
  * existing fields in the plugin data types have to be changed or reordered.
@@ -560,6 +560,7 @@ typedef struct FiletypeFuncs
 	GeanyFiletype*	(*filetypes_detect_from_file) (const gchar *utf8_filename);
 	GeanyFiletype*	(*filetypes_lookup_by_name) (const gchar *name);
 	GeanyFiletype*	(*filetypes_index)(gint idx);
+	const gchar*	(*filetypes_get_display_name)(GeanyFiletype *ft);
 	/* Remember to convert any filetype_id arguments to GeanyFiletype pointers in any
 	 * appended functions */
 }
